--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,13 +19,13 @@
     </div>
 
     <!-- Third-Party JS -->
-    <script type="text/javascript" src="/bower_components/geopattern/js/geopattern.min.js"></script>
+    <script type="text/javascript" src="/blog/bower_components/geopattern/js/geopattern.min.js"></script>
 
     <!-- My JS -->
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <script type="text/javascript" src="/blog/assets/js/script.js"></script>
 
     {% for javascript in page.javascript %}
-    <script src="/assets/js/{{javascript}}"></script>
+    <script src="/blog/assets/js/{{javascript}}"></script>
     {% endfor %}
 
     {% if site.analytics.google.tracking_id %}
